Test avant retour

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,6 @@ wp-content/uploads/2021/04/21506055lpw-21506054-article-jpg_7816485_200x133.jpg
 wp-content/uploads/2021/04/nathan-dumlao-kME9jbKd-s-unsplash.jpg
 wp-content/uploads/2021/04/john-jennings-fg7J6NnebBc-unsplash.jpg
 wp-content/uploads/2021/04/Fond.jpg
+wp-content/uploads/2021/04/site-wordpress-cms-1.jpg
+wp-content/uploads/2021/04/Couverture-Voyage-Spirituelle.png
+wp-content/uploads/2021/04/adobe_xd_-_maquettez_votre_ux_design_pour_le_web.jpg
