--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,5 @@ wp-content/uploads/2021/04/Fond.jpg
 wp-content/uploads/2021/04/site-wordpress-cms-1.jpg
 wp-content/uploads/2021/04/Couverture-Voyage-Spirituelle.png
 wp-content/uploads/2021/04/adobe_xd_-_maquettez_votre_ux_design_pour_le_web.jpg
+wp-content/uploads/2021/04/kaleidico-26MJGnCM0Wc-unsplash-scaled.jpg
+wp-content/uploads/2021/04/kaleidico-26MJGnCM0Wc-unsplash.jpg
