Ajout d'un Article Moodboard et Developement Jeux

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,9 @@ wp-content/uploads/2021/04/cropped-CM-Version-final.jpg
 wp-content/uploads/2021/04/cropped-CM-Version-Icone-Web.jpg
 wp-content/uploads/2021/04/CM-Version-final.jpg
 wp-content/uploads/2021/04/CM-Version-Icone-Web.jpg
+wp-content/uploads/2021/04/Capture-decran-17.png
+wp-content/uploads/2021/04/Moodboard-Christopher-Moron-1.pdf
+wp-content/uploads/2021/04/Moodboard-Christopher-Moron-1.jpg
+wp-content/uploads/2021/04/Moodboard-Christopher-Moron.pdf
+wp-content/uploads/2021/04/Capture-decran-19.png
+wp-content/uploads/2021/04/bailey-zindel-NRQV-hBF10M-unsplash.jpg
