Avant modification importante

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,14 @@ wp-content/uploads/2021/04/Moodboard-Christopher-Moron-1.jpg
 wp-content/uploads/2021/04/Moodboard-Christopher-Moron.pdf
 wp-content/uploads/2021/04/Capture-decran-19.png
 wp-content/uploads/2021/04/bailey-zindel-NRQV-hBF10M-unsplash.jpg
+wp-content/uploads/2021/04/image.jpeg.jpg
+wp-content/uploads/2021/04/CV-de-Christopher-MORON.pdf
+wp-content/uploads/2021/04/Capture-decran-20.png
+wp-content/uploads/2021/04/Blue-27239.mp4
+wp-content/uploads/2021/04/Blue-27239-2.mp4
+wp-content/uploads/2021/04/Blue-27239-1.mp4
+wp-content/uploads/2021/04/Blue-27239-3.mp4
+wp-content/uploads/2021/04/CV-de-Christopher-MORON-1.pdf
+wp-content/uploads/2021/04/CV-de-Christopher-MORON-2.pdf
+wp-content/uploads/2021/04/blue-motion-background.mp4
+wp-content/uploads/2021/04/index.html
